--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Voting system</title>
+    <title>Blockchain system</title>
   </head>
   <body>
     <header class="header">
